fix: dropdown z-index

--- a/frontend/style/_filters.scss
+++ b/frontend/style/_filters.scss
@@ -43,6 +43,7 @@
 .dropdownFilter {
   position: relative;
   display: inline-block;
+  z-index: 15;
 
   &__selected {
     min-width: 7rem;
@@ -53,7 +54,7 @@
     position: absolute;
     min-width: 7rem;
     box-shadow: 0 0.5rem 1rem 0 var(--shadow-3);
-    z-index: 1;
+    z-index: 20;
   }
 
   &__opt {
